assign1/tests/type-checking/bad/func-too-many-args.c
#include "FenneC.h"

void foo(unsigned a) {
}
int main() {
    foo(1U, 1U);
    return 0;
}